--- a/Fashion1/Fashion/Controller/Brand/BrandView/NormolCollectionCell.xib
+++ b/Fashion1/Fashion/Controller/Brand/BrandView/NormolCollectionCell.xib
@@ -7,14 +7,29 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="NormolCollectionCell">
+            <rect key="frame" x="0.0" y="0.0" width="110" height="105"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="110" height="105"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RhB-sI-R12">
+                        <rect key="frame" x="0.0" y="0.0" width="110" height="105"/>
+                    </imageView>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <point key="canvasLocation" x="213" y="201"/>
+            <constraints>
+                <constraint firstItem="RhB-sI-R12" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="J9U-Iy-oc4"/>
+                <constraint firstAttribute="bottom" secondItem="RhB-sI-R12" secondAttribute="bottom" id="Pri-Eu-nPe"/>
+                <constraint firstAttribute="trailing" secondItem="RhB-sI-R12" secondAttribute="trailing" id="acP-qK-mNW"/>
+                <constraint firstItem="RhB-sI-R12" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ovr-ti-AJj"/>
+            </constraints>
+            <size key="customSize" width="110" height="105"/>
+            <connections>
+                <outlet property="bkImage" destination="RhB-sI-R12" id="k2V-Uz-c5R"/>
+            </connections>
+            <point key="canvasLocation" x="243" y="228.5"/>
         </collectionViewCell>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
