--- a/Fashion1/Fashion/Controller/Brand/BrandView/BrandHearViewCell.xib
+++ b/Fashion1/Fashion/Controller/Brand/BrandView/BrandHearViewCell.xib
@@ -3,80 +3,87 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="370" id="KGk-i7-Jjw" customClass="BrandHearViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="370"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="420" id="KGk-i7-Jjw" customClass="BrandHearViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="420"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qIc-hK-7LT">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="134"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cZT-Ku-PUL">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="134"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="悬赏详情_03" translatesAutoresizingMaskIntoConstraints="NO" id="cZT-Ku-PUL">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="134" id="MJi-He-1RA"/>
                             <constraint firstItem="cZT-Ku-PUL" firstAttribute="top" secondItem="qIc-hK-7LT" secondAttribute="top" id="UnU-K1-huM"/>
+                            <constraint firstAttribute="width" secondItem="qIc-hK-7LT" secondAttribute="height" multiplier="1:0.55" id="b7g-no-yZk"/>
                             <constraint firstAttribute="trailing" secondItem="cZT-Ku-PUL" secondAttribute="trailing" id="dyt-UE-HgS"/>
                             <constraint firstAttribute="bottom" secondItem="cZT-Ku-PUL" secondAttribute="bottom" id="pWg-my-6va"/>
                             <constraint firstItem="cZT-Ku-PUL" firstAttribute="leading" secondItem="qIc-hK-7LT" secondAttribute="leading" id="soe-zJ-jhn"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="秀出恩爱，秀出最暖的恩爱,最乖的爱" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SjW-mj-Mu6">
-                        <rect key="frame" x="8" y="134" width="304" height="21"/>
+                        <rect key="frame" x="8" y="176" width="304" height="21"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="CKe-4d-qtX"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wib-Ht-jIz" userLabel="secondView">
-                        <rect key="frame" x="10" y="155" width="300" height="167"/>
+                        <rect key="frame" x="10" y="197" width="300" height="167"/>
                         <subviews>
-                            <view alpha="0.14999999999999969" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zQP-Om-GEk">
+                            <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zQP-Om-GEk">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="167"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.43137254901960786" green="0.48627450980392156" blue="0.55686274509803924" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ys-uy-zed">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ys-uy-zed">
                                 <rect key="frame" x="3" y="5" width="60" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="Fmj-Zb-LL0"/>
                                     <constraint firstAttribute="height" constant="19" id="ivO-YK-x2w"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="查看概要">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="lookDetail:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="fcw-bJ-lzh"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="glz-B0-M5O">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="glz-B0-M5O">
                                 <rect key="frame" x="239" y="5" width="60" height="19"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="19" id="XdV-qx-mDk"/>
                                     <constraint firstAttribute="width" constant="60" id="jXr-de-qlf"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="提交照片">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="submitPhoto:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="1OS-zh-Fdu"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     请大家踊跃投稿，请大家踊跃投稿请大家踊跃投稿请大家踊跃投稿，，请大家踊跃投稿，" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m75-56-HAk">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="     请大家踊跃投稿，请大家踊跃投稿请。" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m75-56-HAk">
                                 <rect key="frame" x="12" y="27" width="287" height="140"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="zQP-Om-GEk" secondAttribute="bottom" id="0NL-Zu-Gd1"/>
                             <constraint firstItem="glz-B0-M5O" firstAttribute="top" secondItem="Wib-Ht-jIz" secondAttribute="top" constant="5" id="4e1-2C-xLv"/>
@@ -94,8 +101,8 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0u-lP-I9Q" customClass="TitleBar">
-                        <rect key="frame" x="8" y="330" width="304" height="34"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <rect key="frame" x="8" y="372" width="304" height="34"/>
+                        <color key="backgroundColor" red="0.68627450980392157" green="0.6470588235294118" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="34" id="R4t-R6-myQ"/>
                         </constraints>
@@ -117,11 +124,17 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="conteViewHeightConstraint" destination="Vm4-rH-Rsn" id="caN-M8-cqx"/>
+                <outlet property="detailContent" destination="m75-56-HAk" id="HLs-m6-8sv"/>
+                <outlet property="secondContentView" destination="Wib-Ht-jIz" id="HXu-YG-uG5"/>
                 <outlet property="titleBarView" destination="S0u-lP-I9Q" id="a9J-6H-szF"/>
             </connections>
-            <point key="canvasLocation" x="299" y="296"/>
+            <point key="canvasLocation" x="299" y="321"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="悬赏详情_03" width="375" height="221"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
